Created models and API with retrofit. Updated url`s backend.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="or">OR</string>
+    <string name="id_movie">Enter identity movie</string>
+    <string name="get_movie">Show movie</string>
 </resources>
