--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="recommendations">For me</string>
     <string name="actors">Actors</string>
     <string name="movies">Movies</string>
+    <string name="title_activity_actor">ActorActivity</string>
 </resources>
