Added back button and dialog with names of the authors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="title_activity_actor">ActorActivity</string>
     <string name="logout">Logout</string>
     <string name="about">About</string>
+    <string name="aboutDev">Authors</string>
+    <string name="authors">\n Daniel Babiak \n Kamil Gonska \n Łukasz Kępka</string>
 </resources>
