--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
     <string name="actors">Actors</string>
     <string name="movies">Movies</string>
     <string name="title_activity_actor">ActorActivity</string>
+    <string name="actors_label">Actors</string>
+    <string name="directors_label">Directors:</string>
+    <string name="types_label">Types:</string>
+    <string name="movies_label">Movies</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reviews_label">Reviews</string>
+    <string name="add_review">Add review</string>
+    <string name="review_hint">Review</string>
+    <string name="rating_hint">Rating</string>
+    <string name="submit">Submit</string>
 </resources>
